--- a/conf/config.ini
+++ b/conf/config.ini
@@ -2,8 +2,8 @@ port = 9000
 release = false
 
 [mysql]
-user = root
-password = root1234
-host = 127.0.0.1
-port = 23306
+user =
+password =
+host =
+port = 3306
 db = bubble
